# Flipping-Bot

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  tox.ini  utility.py
commands/: runtime.py
databases/: items.db
