[tool.poetry]
name = "FlippingBot"
version = "0.1.0"
description = ""
authors = ["Brody Critchlow"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
nextcord-ext-menus = "^1.5.6"
nextcord = "^2.4.1"
requests = "^2.28.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
